chore: fix build error due to memory config

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dev:gamification": "pnpm turbo run dev --filter=gamification... --concurrency=28",
     "storybook": "turbo run start --filter=uikit...",
     "build:storybook": "turbo run build:storybook --filter=uikit...",
-    "build": "turbo run build --filter=web...",
+    "build": "NODE_OPTIONS=--max_old_space_size=8192 turbo run build --force --filter=web...",
     "build:blog": "turbo run build --filter=blog...",
     "build:aptos": "turbo run build --filter=aptos-web...",
     "build:bridge": "turbo run build --filter=bridge...",
