feat: init dappOS sdk

--- a/apps/web/.env.development
+++ b/apps/web/.env.development
@@ -6,3 +6,8 @@ NEXT_PUBLIC_WEB_PUSH_IV=''
 NEXT_PUBLIC_VAPID_KEY=''
 NEXT_PUBLIC_SNAPSHOT_BASE_URL = "https://testnet.snapshot.org"
 
+NEXT_PUBLIC_DAPPOS_ENV="production"
+NEXT_PUBLIC_DAPPOS_SUPER_ADMIN="https://api.dappos.com"
+NEXT_PUBLIC_DAPPOS_EXPLORER_HOST="https://wallet.dappos.com"
+NEXT_PUBLIC_DAPPOS_RPC_URL="https://v2rpc.dappos.com"
+
