--- a/apps/web/.env
+++ b/apps/web/.env
@@ -1,3 +1,8 @@
 NEXT_PUBLIC_MM_API_URL=https://linked-pool.pancakeswap.com/quote-service
 NEXT_PUBLIC_QUOTING_API=https://swap-quoting.pancakeswap.com/quoting-service
 MOONPAY_API="https://api.moonpay.com"
+
+NEXT_PUBLIC_DAPPOS_ENV="production"
+NEXT_PUBLIC_DAPPOS_SUPER_ADMIN="https://api.dappos.com"
+NEXT_PUBLIC_DAPPOS_EXPLORER_HOST="https://wallet.dappos.com"
+NEXT_PUBLIC_DAPPOS_RPC_URL="https://v2rpc.dappos.com"
