--- a/apps/web/.env.production
+++ b/apps/web/.env.production
@@ -2,3 +2,8 @@ NEXT_PUBLIC_GTAG = "GTM-TLF66T4"
 
 NEXT_PUBLIC_SNAPSHOT_BASE_URL = "https://hub.snapshot.org"
 
+NEXT_PUBLIC_DAPPOS_ENV="production"
+NEXT_PUBLIC_DAPPOS_SUPER_ADMIN="https://api.dappos.com"
+NEXT_PUBLIC_DAPPOS_EXPLORER_HOST="https://wallet.dappos.com"
+NEXT_PUBLIC_DAPPOS_RPC_URL="https://v2rpc.dappos.com"
+
