feat: add wallet-lite dependencies

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,15 +35,19 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
-    "@dappos/checkout": "0.2.5-alpha.11",
-    "@dappos/v2-sdk": "2.0.13-alpha.11",
     "@binance/w3w-utils": "1.1.4",
     "@binance/w3w-wagmi-connector-v2": "^1.2.3",
     "@cyberlab/cyber-app-sdk": "v3.0.0-beta.5",
+    "@dappos/checkout": "0.2.5-alpha.11",
+    "@dappos/v2-sdk": "2.0.13-alpha.11",
+    "@dappos/wallet-lite": "^0.0.41",
     "@datadog/browser-logs": "^5.8.0",
     "@datadog/browser-rum": "^5.8.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@gelatonetwork/limit-orders-lib": "^4.1.0",
     "@gnosis.pm/safe-apps-wagmi": "^1.2.0",
+    "@mui/material": "^5.15.18",
     "@next/bundle-analyzer": "13.0.7",
     "@orbs-network/twap-ui": "0.10.14",
     "@orbs-network/twap-ui-pancake": "0.10.14",
