--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -104,6 +104,7 @@
     "dayjs": "^1.11.10",
     "easymde": "2.16.1",
     "ethers": "^5.7.0",
+    "ethers-multicall": "^0.2.4",
     "fast-json-stable-stringify": "^2.1.0",
     "graphql": "^16.8.1",
     "graphql-request": "5.0.0",
