--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -91,6 +91,7 @@
     "@web3inbox/core": "1.2.0",
     "@web3inbox/react": "1.2.0",
     "@yornaath/batshit": "^0.9.0",
+    "axios": "^1.2.3",
     "ajv": "^6.12.3",
     "bignumber.js": "^9.0.0",
     "bottleneck": "^2.19.5",
