--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "apis/*",
     "scripts"
   ],
-  "packageManager": "pnpm@8.15.6",
+  "pnpm": {
+    "packageManager": "pnpm"
+  },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "dev": "turbo run dev --filter=web... --parallel --continue",
