chore: update package config

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "scripts"
   ],
   "pnpm": {
-    "packageManager": "pnpm"
+    "packageManager": "pnpm@8.15.6"
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
